--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@react-navigation/bottom-tabs": "^5.8.0",
         "@react-navigation/native": "^5.7.3",
         "@react-navigation/stack": "^5.9.0",
+        "@types/react-redux": "^7.1.9",
         "base-64": "^0.1.0",
         "expo": "~38.0.8",
         "expo-image-picker": "~8.3.0",
