--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
         "@types/redux-logger": "^3.0.8",
         "base-64": "^0.1.0",
         "expo": "~38.0.8",
-        "expo-image-picker": "~8.3.0",
-        "expo-permissions": "~9.0.1",
+        "expo-image-picker": "^8.3.0",
+        "expo-linear-gradient": "~8.2.1",
+        "expo-permissions": "^9.0.1",
         "expo-status-bar": "^1.0.2",
         "lodash": "^4.17.19",
         "react": "~16.11.0",
@@ -37,8 +38,7 @@
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.3.0",
-        "expo-linear-gradient": "~8.2.1"
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.8.6",
