--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@react-navigation/bottom-tabs": "^5.8.0",
         "@react-navigation/native": "^5.7.3",
         "@react-navigation/stack": "^5.9.0",
+        "@types/lodash": "^4.14.159",
         "@types/react-redux": "^7.1.9",
         "@types/redux-logger": "^3.0.8",
         "base-64": "^0.1.0",
