--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "expo-linear-gradient": "~8.2.1",
         "expo-permissions": "^9.0.1",
         "expo-status-bar": "^1.0.2",
+        "formik": "^2.1.5",
         "lodash": "^4.17.19",
         "react": "~16.11.0",
         "react-dom": "~16.11.0",
@@ -39,7 +40,8 @@
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "yup": "^0.29.3"
     },
     "devDependencies": {
         "@babel/core": "^7.8.6",
