--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/lodash": "^4.14.159",
         "@types/react-redux": "^7.1.9",
         "@types/redux-logger": "^3.0.8",
+        "@types/yup": "^0.29.5",
         "base-64": "^0.1.0",
         "expo": "~38.0.8",
         "expo-image-picker": "^8.3.0",
