--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-native-reanimated": "~1.9.0",
         "react-native-safe-area-context": "~3.0.7",
         "react-native-screens": "^2.9.0",
+        "react-native-view-more-text": "^2.1.0",
         "react-native-web": "~0.11.7",
         "yup": "^0.29.3"
     },
