--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "@types/yup": "^0.29.5",
         "base-64": "^0.1.0",
         "expo": "~38.0.8",
-        "expo-image-picker": "^8.3.0",
+        "expo-image-picker": "~8.3.0",
         "expo-linear-gradient": "~8.2.1",
         "expo-permissions": "^9.0.1",
         "expo-status-bar": "^1.0.2",
